--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,10 @@
 # https://help.github.com/articles/ignoring-files
 # Example .gitignore files: https://github.com/github/gitignore
 /bower_components/
+
+# Backend Spring
+backend/src/main/resources/application.properties
+backend/target/classes/application.properties
+
+# Frontend Angular
 /node_modules/
